--- a/indedx.html
+++ b/indedx.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>joke editer </title>
+ <link rel="stylesheet" href="style.css">
+ 
 </head>
 <body>
 
-    <div  class="">
+    <div  class="container">
         <button>joke junreter</button>
-    </div>
+   
     <div class="">
         <h1 class="one"></h1>
         <h2 class="two"></h2>
-        
+        <h3>click Button to jeneretor joke</h3>
     </div>
-    
+</div>
     <script src="./script.js"></script>
 </body>
 </html>
