--- a/indedx.html
+++ b/indedx.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>joke editer </title>
+    <title>joke junreter </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
  <link rel="stylesheet" href="style.css">
  
 </head>
@@ -11,7 +13,9 @@
 
     <div  class="container">
         <button>joke junreter</button>
-   
+
+        <span><i class="fa-regular fa-face-grin-tears"></i></span>
+
     <div class="">
         <h1 class="one"></h1>
         <h2 class="two"></h2>
